--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,11 +1,12 @@
 
-<body id="wrapper">
   <div class="firstview">
-  </div>
-  <div class="viewlogo">
+    <!--<%= video_tag("/asset/top-v.mp4", :autoplay => true,:loop => true,) %>-->
+ <!--  
+  <div class="viewlogo"></div>
+ デザイン変更
     <%= image_tag 'logo.png' %>
 
-<!--  デザイン変更
+
         <header>
           <div class="header">
             <div class="header-left">
@@ -17,10 +18,10 @@
               </div>
           </div>
          </header>
-        <h1>美意識に、革命を。</h1>
-        <h2>たっと一目で、あなたの価値観に衝撃を与える写真集が、ここにある。</h2>
-      -->
-    </div>
+-->
+        <h1>美意識に、革命を</h1>
+        <h2>たっと一目で、あなたの価値観に衝撃を与える写真集が、ここにある</h2>
+</div>
     <!--固定メニューバー-->
     <div class="fixedmenu">
       <div class="sidemenu">
@@ -112,7 +113,7 @@
       </div>
     </div>
     <div class="pagenation">
-      <a href="?p=<%= @nextpage %>" rel="next">NEXT PAGE</a>
+      <a href="?p=<%= @nextpage %>" rel="next"></a>
     </div>
 
 
