--- a/app/assets/stylesheets/tops.css.scss
+++ b/app/assets/stylesheets/tops.css.scss
@@ -14,23 +14,7 @@ a:link {
   font-style:normal;
   text-decoration:underline;
 }
-h1{
-  font-size: 7rem;
-  color: white;
-  font-family: serif;
-  text-align: center;
-  padding-left:100px;
-  margin: 0;
-  margin-top: 200px;
-}
-h2{
-  font-size: 2rem;
-  color: white;
-  font-family: serif;
-  text-align: center;
-  letter-spacing:10px;
-  margin-top: 66px;
-}
+
 
  p{
     height: 50px;
@@ -100,22 +84,49 @@ ul {
 /* First View
 -------------------------------*/
 .firstview{
-  background-image: image-url('bg_home01.jpg');
-  background-size: cover;
-  background-position: center;
-  height:550px;
-  width: 100%;
-}
-.viewlogo{
-  position: absolute;
-  top: 20px;
-  left: 20px;
-   img{
-    height: 50%;
-    width: 50%;
-   }
+   background-image: image-url('bg_home01.jpg');
+   background-size: cover;
+   background-position: center;
+     height:550px;
+     width: 100s%;
+//   width: 100%;
+
+              h1{
+                padding-top: 140px;
+                font-size: 7rem;
+                text-align: center;
+                margin: 0 auto;
+                font-family: cursive;
+                padding-left: 100px;
+                padding-right:100px;
+                color: white;
+
+              }
+              h2{
+                font-size: 1.5rem;
+                text-align: center;
+                letter-spacing:10px;
+                font-family: cursive;
+                color: white;
+              }
+
 
 }
+video{
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+}
+// .viewlogo{
+//   position: absolute;
+//   top: 20px;
+//   left: 20px;
+//    img{
+//     height: 50%;
+//     width: 50%;
+//    }
+
+// }
 
 /* Side Navigation
 -------------------------------*/
@@ -290,22 +301,29 @@ ul {
   }
 
 #container {
-  width: 96%;
   margin: 0 auto;
+  z-index: 3;
+  margin-top: 50px;
+
 }
 
 /* Books 
 -------------------------------*/
 .testimage {
-  width: 95%;
+  width: 97%;
   text-align: center;
   margin: 0 auto;
+
+
   img{
     //width: 24.8%;
     //padding: 3px 0.1% 0;
     //margin: 0.1%;
     //width: 320px;
     border-radius: 10px;
+    margin: 0.2%;
+    border: 0.1% solid gray;
+
     
     max-height: none;
     //box-shadow: 5px 5px 5px rgba(0,0,0,0.4);
@@ -317,14 +335,14 @@ ul {
 }
 
 .w1{
-  width: 480px;
+  width: 24.4%;
 }
 .w2{
-  width: 240px;
+  width: 24.4%;
 }
-.w3{
-  width: 160px;
-}
+// .w3{
+//   width: 160px;
+// }
 
 /* pop
 -------------------------------*/
