--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -240,6 +240,10 @@ $(function() {
 });
 </script>
 
+<!-- Start of Amazon Publisher Studio Loader -->    
+<script>  window.amznpubstudioTag = "bun5jp-22";  </script>    
+<!-- Do not modify the following code ! -->  
+<script async="true" type="text/javascript" src="http://ps-jp.amazon-adsystem.com/domains/bun5jp-22_6f0eb48a-24e8-455c-b05e-7958a9fa76b3.js" charset="UTF-8"></script>    <!-- End of Amazon Publisher Studio Loader -->  
 
 
 
