--- a/app/assets/stylesheets/tops.css.scss
+++ b/app/assets/stylesheets/tops.css.scss
@@ -1,4 +1,3 @@
-$font-family:'Raleway', sans-serif, "リュウミン L-KL", "Ryumin Light KL", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
 
 @import "bootstrap.min.css";
 
@@ -7,7 +6,8 @@ $font-family:'Raleway', sans-serif, "リュウミン L-KL", "Ryumin Light KL", "
 body{
   margin: 0;
   padding: 0;
-  font-family:'Raleway', sans-serif, "リュウミン L-KL", "Ryumin Light KL", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+  font-family:"Raleway","リュウミン L-KL", "Ryumin Light KL";
+  font-style:normal;
 
 }
 a:link {
@@ -16,13 +16,13 @@ a:link {
 }
 
 
- p{
-    height: 50px;
-    text-align: center;
-    color: white;
-    margin: 0;
-    margin-top: 0px;
-  }
+p{
+  height: 50px;
+  text-align: center;
+  color: white;
+  margin: 0;
+  margin-top: 0px;
+}
 
 ul {
   //text-align: center;
@@ -30,16 +30,16 @@ ul {
   width: 300px;
   height: 50px;
   padding: 0px;
-  } 
-  li{
-    list-style: none;
-    float: left;
-    padding: 0px;
-    text-align: center;
-    color:white;
-    width: 75px;
-    line-height: 50px;
-    p{
+} 
+li{
+  list-style: none;
+  float: left;
+  padding: 0px;
+  text-align: center;
+  color:white;
+  width: 75px;
+  line-height: 50px;
+  p{
     font-size: 20px;
     display: block;
     transition-duration: 1s;
@@ -84,49 +84,36 @@ ul {
 /* First View
 -------------------------------*/
 .firstview{
-   background-image: image-url('bg_home01.jpg');
-   background-size: cover;
-   background-position: center;
-     height:550px;
-     width: 100s%;
-//   width: 100%;
-
-              h1{
-                padding-top: 140px;
-                font-size: 7rem;
-                text-align: center;
-                margin: 0 auto;
-                font-family: cursive;
-                padding-left: 100px;
-                padding-right:100px;
-                color: white;
-
-              }
-              h2{
-                font-size: 1.5rem;
-                text-align: center;
-                letter-spacing:10px;
-                font-family: cursive;
-                color: white;
-              }
-
-
+ background-image: image-url('bg_home01.jpg');
+ background-size: cover;
+ background-position: center;
+ height:600px;
+ width: 100%;
+ h1{
+  padding-top: 190px;
+  font-size: 7rem;
+  text-align: center;
+  margin: 0 auto;
+  font-family: cursive;
+  padding-left: 100px;
+  padding-right:100px;
+  color: white;
+  text-shadow: 1px 1px 3px #000;  
+}
+h2{
+  font-size: 1.5rem;
+  text-align: center;
+  letter-spacing:7px;
+  font-family: cursive;
+  color: white;
+  text-shadow: 1px 1px 3px #000;  
+}
 }
 video{
   width: 100%;
   position: fixed;
   z-index: 1;
 }
-// .viewlogo{
-//   position: absolute;
-//   top: 20px;
-//   left: 20px;
-//    img{
-//     height: 50%;
-//     width: 50%;
-//    }
-
-// }
 
 /* Side Navigation
 -------------------------------*/
@@ -139,9 +126,9 @@ video{
   margin: 0 auto;
 
   &:hover{
-        border-radius: 10px;
-        background-color: #f8ced0;
-        }
+    border-radius: 10px;
+    background-color: #f8ced0;
+  }
   div{
     font-size: 20px;
     display: block;
@@ -154,10 +141,28 @@ video{
   }
 }
 .fa{
-  color: black;
-  padding-left:20px;
-}
+  color: white;
+  margin: 0;
+  padding: 0;
+  float: left;
+  margin-top: 15px;
+  margin-left: 20px;
+  margin-right: -10px;
 
+
+}
+#open-sb{
+  width: 125px !important;
+  nav{
+    font-size: 20px;
+    display: block;
+    padding: 0px;
+    text-align: center;
+    color:white;
+    line-height: 50px;
+
+  }
+}
 
 
 /* Go Home Navigation
@@ -166,15 +171,17 @@ video{
   width: 50px;
   float: left;
   line-height: 50px;
-  color: black;
+  color: white;
   text-align: center;
   display: block;
   transition-duration: 1s;
-  font-size: 1rem;
-   &:hover{
-        border-radius: 10px;
-        background-color: #f8ced0;
-        }
+  font-size: 1.5rem;
+  cursor: n-resize;
+  
+  &:hover{
+    border-radius: 10px;
+    background-color: #f8ced0;
+  }
 }
 
 /* Category
@@ -186,23 +193,23 @@ video{
   right: 10px;
   position: fixed;
   z-index: 100;
-  //background-color: rgba(0,0,0,0.7);
+  background-color: rgba(0,0,0,0.3);
   .category{
     width: 125px;
     float: left;
     display: block;
     transition-duration: 1s;
-   &:hover{
-        border-radius: 10px;
-        background-color: #f8ced0;
-        }
+    &:hover{
+      border-radius: 10px;
+      background-color: #f8ced0;
+    }
 
     a{
       font-size: 18px;
       display: block;
       padding: 0px;
       text-align: center;
-      color:black;
+      color:white;
       line-height: 50px;
       font-style: bold;
       text-decoration: none;
@@ -226,84 +233,87 @@ ul {
     width: 75px;
     line-height: 50px;
     p{
-    cursor: pointer;
-    font-size: 15px;
-    display: block;
-    transition-duration: 1s;
-    color:black;
+      cursor: pointer;
+      font-size: 15px;
+      display: block;
+      transition-duration: 1s;
+      color:white;
       &:hover{
         border-radius: 10px;
         background-color: #f8ced0;
-        }
       }
     }
+  }
 }
 
 /* sidebar
 -------------------------------*/
-  .sidebar{
-    background-color: #f8ced0;
-    li > a >.fa{
-      display: block;
-      cursor: pointer;
-      font-size: 2rem;
-      color: gray;
-      margin: 10px 0px 10px 230px;
-      transition-duration: 0.5s;
-      &:hover{
-        color: white;
-      }
-    
+.sidebar{
+  background-color: #f8ced0;
+  li > a >.fa{
+    display: block;
+    cursor: pointer;
+    font-size: 2rem;
+    color: gray;
+    margin: 10px 0px 10px 270px;
+    transition-duration: 0.5s;
+    &:hover{
+      color: white;
     }
-    nav{
-      clear: both;
-      width: 310px;
+    
+  }
+  nav{
+    clear: both;
+    width: 310px;
+    text-align: left;
+    p{
+      font-size: 2rem;
+      color:red;
       text-align: left;
-      p{
-        font-size: 2rem;
-        color:red;
+      letter-spacing: 3px;
+      padding-left: 28px;
+      line-height: 50px;
+      margin-bottom: 10px;
+    }
+    ul{
+      margin: 0;
+      li{
+        width: 310px;
+        height: 49px;
+        border-bottom: 1px solid white;
         text-align: left;
-        letter-spacing: 3px;
-        padding-left: 28px;
-        line-height: 50px;
-        margin-bottom: 10px;
-      }
-      ul{
-        margin: 0;
-        li{
-          width: 310px;
-          height: 49px;
-          border-bottom: 1px solid white;
-          text-align: left;
-          
-          transition-duration: 0.5s;
-           &:hover{
-              background-color: white;
 
-            }
+        transition-duration: 0.5s;
+        &:hover{
+          background-color: white;
 
-          a{
-            font-size: 26px;
-            color: black;
-            text-decoration: none;
-            letter-spacing: 3px;
-            line-height: 50px;
-            display: block;
-            padding-left: 30px;
-            transition-duration: 0.6s;
-             &:hover{
-                color:red;
-              }
+        }
+
+        a{
+          font-size: 26px;
+          color: black;
+          text-decoration: none;
+          letter-spacing: 3px;
+          line-height: 50px;
+          display: block;
+          padding-left: 30px;
+          transition-duration: 0.6s;
+          &:hover{
+            color:red;
+            padding-left: 40px;
+
           }
         }
+
       }
     }
   }
+}
 
 #container {
   margin: 0 auto;
   z-index: 3;
-  margin-top: 50px;
+  margin-top: 30px;
 
 }
 
@@ -327,10 +337,10 @@ ul {
     
     max-height: none;
     //box-shadow: 5px 5px 5px rgba(0,0,0,0.4);
-     &:hover{
+    &:hover{
       background-color: rgba(10,10,10,1);
-          }
-        
+    }
+
   }
 }
 
@@ -355,22 +365,22 @@ ul {
 -------------------------------*/
 
 #popup{
-    position: fixed;
-    text-align: center;
-    top: 50%;
-    left: 50%;
-    z-index: 999;
-    width: 40%;
-    height: 60%;
-    max-height: 650px;
-    min-width: 520px;
-    min-height: 440px;
-    border-radius:3px;
-    background-color: #fff;
+  position: fixed;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  z-index: 999;
+  width: 40%;
+  height: 80%;
+  max-height: 650px;
+  min-width: 520px;
+  min-height: 440px;
+  border-radius:3px;
+  background-color: #fff;
     // filter: alpha(opacity=90);
     //-moz-opacity:0.90;
     //opacity:0.90;
-}
+  }
 
   #layer{
     position: fixed;
@@ -388,13 +398,15 @@ ul {
   .amazon_img{
     img{
       margin-left: 50px;
-      max-height:300px; 
+      max-height:300px;
+      margin-top: 30px;
+      z-index: 100;
 
     }
   }
 
 
-#close{
+  #close{
     color: #aaa;
     position: relative;
     float: right;
@@ -408,17 +420,129 @@ ul {
     text-decoration: none;
     
     transition-duration: 0.6s;
-}
+  }
   #close:hover{
     color:black;
     /*opacity: 0.90;*/
     /*filter:alpha(opacity=90);*/
 
+  }
+
+  .title{
+    margin: 15px auto;
+  }
+
+  .social_link{
+    img{
+      margin: 0 10px;
+      &:hover{
+        opacity:0.6;
+      }
+    }
+  }
+  .note{
+    width: 90%;
+
+    margin: 20px auto;
+    padding: 20px;
+  }
+  .amzn-shop-now-icon{
+    z-index: 99;
+  }
+
+
+
+/* アコーディオン
+-------------------------------*/
+
+ul.accordion ul { 
+  display:none;
 }
+
+ul.accordion section{
+  font-size: 26px;
+  color: gray;
+  text-decoration: none;
+  letter-spacing: 3px;
+  line-height: 50px;
+  display: block;
+  padding-left: 30px;
+  transition-duration: 0.6s;
+  cursor: pointer;
+
+  &:hover{
+    color: orange;
+    padding-left: 40px;
+
+  }
+}
+
+
+ul.accordion ul li{
+  width: 310px;
+  height: 29px;
+  border-bottom: 1px solid white;
+  text-align: left;
+
+  transition-duration: 0.5s;
+  &:hover{
+    background-color: white;
+  }
+
+  a{
+    font-size: 16px;
+    color: black;
+    text-decoration: none;
+    letter-spacing: 3px;
+    line-height: 30px;
+    display: block;
+    padding-left: 60px;
+    transition-duration: 0.6s;
+    &:hover{
+      color:red;
+      padding-left: 65px;
+    }
+  }
+
+}
+
+
+
+
+/* ソーシャル対応
+-------------------------------*/
+#socialize{
+  clear: both;
+  width: 250px;
+  height: 150px;
+  margin: 0 auto;
+  padding-top: 50px;
+  p{
+    color: red;
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
+
+#facebook_like{
+  float: left;
+  padding-right: 10px;
+}
+
+#twitter {
+  float: left;
+}
+
+#hatena {
+  float: right;
+}
+
 
 /* 抹殺予定   
 -------------------------------*/
 #amznimgtoolsplate{
   display: none !important;
 }
+
+
 
