--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -55,15 +55,19 @@
       <nav>
         <p>MENU</p>
         <ul class="accordion">
-          <li><%= link_to 'Home', 'top' %></li>
+          <li><a>Home</a></li>
           <li><%= link_to 'About', 'about' %></li>
           <li id="ac"><section>Category+</section></li>
           <ul>
             <li><a href=" #">リスト 1-1</a></li>
             <li><a href=" #">リスト 1-2</a></li>
             <li><a href=" #">リスト 1-3</a></li>
+            <li><a href=" #">リスト 1-4</a></li>
+            <li><a href=" #">リスト 1-5</a></li>
+            <li><a href=" #">リスト 1-6</a></li>
           </ul>
-          <li><%= link_to 'Request', 'contact' %></li>
+          <li><%= link_to 'Book Request', 'contact' %></li>
+          <li><%= link_to 'Contect', 'contact' %></li>
           <li><%= link_to 'Blog', '#' %></li>
         </ul>
       </nav>
