--- a/app/assets/stylesheets/tops.css.scss
+++ b/app/assets/stylesheets/tops.css.scss
@@ -89,6 +89,7 @@ li{
  background-position: center;
  height:600px;
  width: 100%;
+ background-attachment: fixed;
  h1{
   padding-top: 190px;
   font-size: 7rem;
@@ -315,6 +316,7 @@ ul {
   z-index: 3;
   margin-top: 30px;
 
+
 }
 
 /* Books 
@@ -339,6 +341,7 @@ ul {
     //box-shadow: 5px 5px 5px rgba(0,0,0,0.4);
     &:hover{
       background-color: rgba(10,10,10,1);
+      opacity:0.8;
     }
 
   }
@@ -461,7 +464,7 @@ ul.accordion ul {
 
 ul.accordion section{
   font-size: 26px;
-  color: gray;
+  color: #F55;
   text-decoration: none;
   letter-spacing: 3px;
   line-height: 50px;
