--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -20,7 +20,7 @@
          </header>
        -->
        <h1>美意識に、革命を</h1>
-       <h2>たっと一目で、あなたの価値観に衝撃を与える写真集が、ここにある</h2>
+       <h2>たった一目で、あなたの価値観に衝撃を与える写真集がここにある</h2>
      </div>
      <!--固定メニューバー-->
      <div class="fixedmenu">
