--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,11 @@
     
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
-     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js"></script>
-     <script src="assets/jquery.simplesidebar.min.js"></script>
-     <script src="assets/jquery.infinitescroll.min.js"></script>
-     <script src="assets/jquery.socialbutton-1.9.0.min.js"></script>
+     <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+     // <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js"></script> -->
+     <!-- <script src="assets/jquery.simplesidebar.min.js"></script>
+     // <script src="assets/jquery.infinitescroll.min.js"></script>
+     // <script src="assets/jquery.socialbutton-1.9.0.min.js"></script> -->
      <!--<script src="assets/jquery.pageswitch.js"></script>-->
 
 
