--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,5 +1,5 @@
 
-<div class="firstview" id="1">
+<div class="firstview">
   <!--<%= video_tag("/asset/top-v.mp4", :autoplay => true,:loop => true,) %>-->
  <!--  
   <div class="viewlogo"></div>
@@ -19,7 +19,7 @@
           </div>
          </header>
        -->
-       <h1>美意識に、革命を</h1>
+       <h1 id="1">美意識に、革命を</h1>
        <h2>たった一目で、あなたの価値観に衝撃を与える写真集がここにある</h2>
      </div>
      <!--固定メニューバー-->
