--- a/app/assets/stylesheets/tops.css.scss
+++ b/app/assets/stylesheets/tops.css.scss
@@ -84,7 +84,7 @@ li{
 /* First View
 -------------------------------*/
 .firstview{
- background-image: image-url('bg_home01.jpg');
+ //background-image: image-url('bg_home01.jpg');
  background-size: cover;
  background-position: center;
  height:600px;
