--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,7 +1,8 @@
 
 <div class="firstview">
-  <!--<%= video_tag("/asset/top-v.mp4", :autoplay => true,:loop => true,) %>-->
- <!--  
+  <%= video_tag("top-v.mp4", :autoplay => true,:loop => true,) %>-->
+ 
+<!--
   <div class="viewlogo"></div>
  デザイン変更
     <%= image_tag 'logo.png' %>
