--- a/app/assets/stylesheets/tops.css.scss
+++ b/app/assets/stylesheets/tops.css.scss
@@ -100,6 +100,7 @@ li{
   padding-right:100px;
   color: white;
   text-shadow: 1px 1px 3px #000;  
+  z-index: 3;
 }
 h2{
   font-size: 1.5rem;
@@ -108,13 +109,14 @@ h2{
   font-family: cursive;
   color: white;
   text-shadow: 1px 1px 3px #000;  
+  z-index: 3;
 }
 }
 
 video{
   width: 100%;
   position: fixed;
-  z-index: -1;
+  z-index: -1 !important;
 }
 
 /* Side Navigation
