--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -82,7 +82,7 @@
 
     <!-- サイドバー-->
 
-
+<main>
     <div id="container" class="centered">
       <div id="content">
         <div id ="layer"></div>
@@ -276,3 +276,4 @@ $(function(){
 
 
 
+</main>
