--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="firstview">
-  <%= video_tag("top-v.mp4", :autoplay => true,:loop => true,) %>-->
+  <%= video_tag("top-v.mp4", :autoplay => true,:loop => true,) %>
  
 <!--
   <div class="viewlogo"></div>
