--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -52,7 +52,7 @@
       </ul>
       <li><%= link_to 'Book Request', 'contact' %></li>
       <li><%= link_to 'Contect', 'contact' %></li>
-      <li><%= link_to 'Blog', '#' %></li>
+      <li><%= link_to 'Blog', 'http://blog.v-emotion.co/' %></li>
     </ul>
   </nav>
   <div id="socialize">
