--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -130,8 +130,27 @@ ul li{
   width: 300px;
 }
 
-
-
+#terms_of_conditions{
+  position: fixed;
+  top: 90px;
+  right: 30px;
+  a{
+    display: block;
+    width: 200px;
+    height: 40px;
+    color: white;
+    text-decoration: none;
+    transition-duration: 1s;
+    line-height: 40px;
+    &:hover{
+        border-radius: 10px;
+        background-color: #f8ced0;
+        }
+  }
+}
+ul li{
+  width: 300px;
+}
 
 
 
