--- a/app/views/contact_mailer/post_email.text.erb
+++ b/app/views/contact_mailer/post_email.text.erb
@@ -1,9 +1,14 @@
-22Webサイトからお問い合わせがありました。
+【 VISUAL EMOTION 】
+
+お問い合わせいただき、ありがとうございます。
+下記の内容で承りました。
  
 --------------------------
-Name: <%= @contact.name %>
-Email: <%= @contact.email %>
-Message:
+NAME: 
+<%= @contact.name %>
+EMAIL: 
+<%= @contact.email %>
+MESSAGE:
 <%= @contact.message %>
 --------------------------
 
