--- a/app/views/contact_mailer/received_email.text.erb
+++ b/app/views/contact_mailer/received_email.text.erb
@@ -1,9 +1,13 @@
-11Webサイトからお問い合わせがありました。
+【 VISUAL EMOTION 】
+
+Webサイトよりお問い合わせがありました。
  
 --------------------------
-Name: <%= @contact.name %>
-Email: <%= @contact.email %>
-Message:
+NAME: 
+<%= @contact.name %>
+EMAIL: 
+<%= @contact.email %>
+MESSAGE:
 <%= @contact.message %>
 --------------------------
 
