--- a/app/views/law/law.html.erb
+++ b/app/views/law/law.html.erb
@@ -8,10 +8,10 @@
 	  <%= stylesheet_link_tag    'law', 'data-turbolinks-track' => true %>
 	  <%= javascript_include_tag 'vendor', 'data-turbolinks-track' => true %>
 	  <%= csrf_meta_tags %>
-
-<!-- 	  <p class="backhome"><%= link_to 'About', 'about' %></p> -->
-	  <p class="backhome"><%= link_to 'Home', 'top' %></p>
 	</head>
+
+	<p id="backhome"><%= link_to 'Home', 'top' %></p>
+	<p id="about"><%= link_to 'About', 'about' %></p>
 
 	<body>
       <div class="blackbox">
