--- a/app/views/layouts/about.html.erb
+++ b/app/views/layouts/about.html.erb
@@ -11,13 +11,14 @@
 </head>
 
 <!-- メニューバー　-->
-<p id="backhome"><%= link_to 'Home', 'top' %></li>
+<p id="backhome"><%= link_to 'Home', 'top' %></p>
+<p id="terms_of_conditions"><%= link_to 'Terms of Conditions', 'law' %></p>
   <!-- メニューバー　-->
 
 <body>
   <div class="message1">
     <div class="m1-blackbox">
-      <div class="message-header">ABOUT</div>
+      <div class="message-header">About</div>
       <div class="m1-body">
         <div class="m1-phrase">本×写真=写真集</div><br><br>
         写真家たちが切り取った世界の一端<br>
@@ -35,7 +36,7 @@
 
   <div class="message2">
     <div class="m2-blackbox"><br>
-      <div class="message-header">MORE INFO</div>
+      <div class="message-header">More Info</div>
       <div class="m2-body">
         VISUALEMOTIONは、写真集を感性で選ぶサイトです。<br>
         スクロールする中で直感を揺さぶる不寿あるがあった時、<br>
@@ -47,7 +48,7 @@
         <div class="m2-phrase">美意識に革命を。</div><br>
       </div>
       <div id="site-maker">
-        <div class="message-header">SITE MAKER</div>
+        <div class="message-header">Created By</div>
           <ul>
             <li><font color="#00bfff"> BUNGO NAKAMURA</font> - Designer</li>
             <li><font color="#90ee90"> MICHI KANDA</font> - Mentor</li>
