--- a/app/views/request/thanks.html.erb
+++ b/app/views/request/thanks.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>VISUALEMOTION/contact</title>
-    <%= stylesheet_link_tag    'contact', 'data-turbolinks-track' => true %>
+    <title>VISUALEMOTION/request</title>
+    <%= stylesheet_link_tag    'request', 'data-turbolinks-track' => true %>
 
     <!-- メニューバー　-->
 <p id="backhome"><%= link_to 'Home', 'top' %></p>
@@ -10,13 +10,13 @@
       <!-- メニューバー　-->
 
     <div class="page-header">
-      <h1>CONTACT</h1>
+      <h1>REQUEST</h1>
     </div>
   </head>
 
   <body>
   	<br>
-	<p>お問い合わせいただきありがとうございました</p>
+	<p>写真集のリクエストをいただきありがとうございます</p>
   <p>ご入力いただいたメールアドレスに確認メールをお送りいたしました</p>
   </body>
 
