--- a/app/assets/stylesheets/contact.css.scss
+++ b/app/assets/stylesheets/contact.css.scss
@@ -58,6 +58,8 @@ h1{
   height: 50px;
   width: 200px;
   background-color: white;
+  font-family: Raleway;
+  font-weight: bold;
 }
 
 /* Index
@@ -67,13 +69,14 @@ p{
  font-size: 1rem;
  color: black;
  font-weight: bold;
+ font-family: Raleway;
 }
 
 .text{
   font-size: 1rem;
   // padding: 0;
   border: none;
-  line-height: 50px;
+  line-height: 40px;
   width: 300px;
   // margin: 0;
   // line-height: 30px !important;
