--- a/app/views/contact/confirm.html.erb
+++ b/app/views/contact/confirm.html.erb
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Visualemotion</title>
-    <%= stylesheet_link_tag    'contact', media: 'all', 'data-turbolinks-track' => true %>
+    <title>VISUALEMOTION/contact</title>
+    <%= stylesheet_link_tag    'contact', 'data-turbolinks-track' => true %>
 
     <!-- メニューバー　-->
-    <p id="backhome"><%= link_to 'Home', 'top' %></li>
+<p id="backhome"><%= link_to 'Home', 'top' %></p>
+<p id="terms_of_conditions"><%= link_to 'Terms of Conditions', 'law' %></p>
       <!-- メニューバー　-->
 
     <div class="page-header">
@@ -32,11 +33,11 @@
     <span><%= simple_format(@contact.message) %><span>
     <br>  
     <br>
+    <div id="box"><%= f.submit 'SEND!', :class => "button", disable_with: "SENDING..." %></div>
+    <% end %>
+
   </body>
 </html>
-  
-  <%= f.submit 'SEND!', disable_with: "SENDING..." %>
- <!--  <%= f.submit 'SEND!', :class => 'btn btn-primary' %> -->
 
-<% end %>
+
   
