--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -5,3 +5,31 @@
 <div class="actions">
 <%= link_to 'Back', books_path %>
 <div>
+
+
+<p style="color:black; position:absolute; left:500px; top:0;">
+category<br>
+"1" "art"<br>
+"2" "human"<br>
+"3" "view"<br>
+"4" "animal"<br>
+<br>
+<br>
+sub category<br>
+"1" "cat" ねこ<br>
+"2" "dog" いぬ<br>
+"3" "girls" 少女系<br>
+"4" "idol" アイドル<br>
+"5" "womanactor" 女優<br>
+"6" "manactor" 男優<br>
+"7" "subculture" サブカル<br>
+"8" "design" デザイン、絵<br>
+"9" "fashion" ファッション<br>
+"10"  "country" 国系<br>
+"11"  "culture" カルチャー系<br>
+"12"  "architect" 建物<br>
+"13"  "food" 料理<br>
+"14"  "religion" 宗教<br>
+"15"  "Daysbook" Daysbook<br>
+
+</p>
