--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -168,13 +168,13 @@ close.live('click',function(){
 $(function() {
   $('#hatena').socialbutton('hatena', {
     button: 'vertical',
-    title: '本の書きだし- 出だしよければ、全て良し。',
-    url: 'http://kakidashi.com'
+    title: 'Visual Emotion 美意識に革命を',
+    url: 'http://v-emotion.co'
   });
   $('#twitter').socialbutton('twitter', {
     button: 'vertical',
-    text: '【本の書きだし】- 出だしよければ、全て良し。',
-    url: 'http://kakidashi.com'
+    text: 'Visual Emotion  美意識に革命を',
+    url: 'http://v-emotion.co'
   });
   $('#facebook_like').socialbutton('facebook_like', {
     button: 'box_count',
