--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -37,7 +37,7 @@
   <nav>
     <p>MENU</p>
     <ul class="accordion">
-      <li><a>Home</a></li>
+<!--  <li><a>Home</a></li> -->
       <li><%= link_to 'About', 'about' %></li>
       <li id="ac">
         <section>Category+</section>
@@ -50,8 +50,8 @@
         <li><a href=" #">リスト 1-5</a></li>
         <li><a href=" #">リスト 1-6</a></li>
       </ul>
-      <li><%= link_to 'Book Request', 'contact' %></li>
-      <li><%= link_to 'Contect', 'contact' %></li>
+      <li><%= link_to 'Book Request', 'request' %></li>
+      <li><%= link_to 'Contact', 'contact' %></li>
       <li><%= link_to 'Blog', 'http://blog.v-emotion.co/' %></li>
     </ul>
   </nav>
