--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js"></script>
   <script src="assets/jquery.infinitescroll.min.js"></script>
   <script src="assets/jquery.simplesidebar.min.js"></script>
+  <link rel="shortcut icon" href="/favicon.ico">
 
 </head>
 
