--- a/app/views/request/thanks.html.erb
+++ b/app/views/request/thanks.html.erb
@@ -8,16 +8,17 @@
 <p id="backhome"><%= link_to 'Home', 'top' %></p>
 <p id="terms_of_conditions"><%= link_to 'Terms of Conditions', 'law' %></p>
       <!-- メニューバー　-->
-
-    <div class="page-header">
-      <h1>REQUEST</h1>
-    </div>
   </head>
 
   <body>
-  	<br>
-	<p>写真集のリクエストをいただきありがとうございます</p>
-  <p>ご入力いただいたメールアドレスに確認メールをお送りいたしました</p>
+    <div class="blackspace">
+      <h1>REQUEST</h1>
+      <br>
+    	<p>
+        写真集のリクエストをいただきありがとうございます<br>
+        ご期待に添えるよう参考にさせていただきます<br>
+      </p>
+    </div>
   </body>
 
 <html>
