--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -20,7 +20,7 @@
     <%= link_to 'ABOUT', 'about' %>
   </div>
   <a href="#1" class ="go-home">↑</a>
-  <ul>
+  <ul class=main-category>
     <li><P>ART</P></li>
     <li><P>HUMAN</P></li>
     <li><P>VIEW</P></li>
@@ -37,7 +37,7 @@
   <nav>
     <p>MENU</p>
     <ul class="accordion">
-<!--  <li><a>Home</a></li> -->
+      <li><a href="#1"  id="home">Home</a></li>
       <li><%= link_to 'About', 'about' %></li>
       <li id="ac">
         <section>Category+</section>
