--- a/app/assets/stylesheets/tops.css.scss
+++ b/app/assets/stylesheets/tops.css.scss
@@ -345,6 +345,31 @@ ul {
 .w2{
   width: 24.4%;
 }
+
+
+#home{display: none;}
+@media screen and (max-width: 900px) {
+  .w1 {width: 32.7%}
+  .w2 {width: 32.7%}}
+@media screen and (max-width: 600px) {
+  .w1 {width: 48.8%}
+  .w2 {width: 48.8%}
+  .fixedmenu{
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 50px;}
+  .main-category{display: none;}
+  .category{display: none !important;}
+  .sidemenu{float: none;}
+  .go-home{display: none;}
+  #home{display: block;}
+  .sidebar{ background-color:rgba(255,255,255,0.6);}}
+@media screen and (max-width: 480px) {
+  .w1 {width: 99.2%}
+  .w2 {width: 99.2%}}
+
+
 // .w3{
 //   width: 160px;
 // }
